# AgenticCloudServiceValidator

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/agents/: ImplementerAgent.agent.md  ReviewerAgent.agent.md
agents/: __init__.py  alert_agent.py  anomaly_agent.py  data_fetcher_agent.py  verification_agent.py
config/: demo_usage.py  example-config.json
k8s/: README.md  deployment.yaml  ingress.yaml  postgres.yaml
monitoring/grafana/dashboards/: dashboard-provider.yml
monitoring/prometheus/: prometheus.yml
src/: __init__.py  config.py  main.py  models.py  orchestrator.py  scheduler.py
src/api/: __init__.py  configs.py  validations.py
src/auth/: __init__.py  handler.py
src/storage/: __init__.py  database.py  repository.py
tests/: __init__.py  test_basic.py
